--- a/index.html
+++ b/index.html
@@ -85,16 +85,7 @@
                         <h2>Сайт Гоменюк Андрій</h2>
                     </a>
                 </article>
-                <article>
-                    <a href="https://www.figma.com/file/I8tdLMTIAFuFPtdIIMSxzJ/%D0%9C5%D0%A33-%D0%B4%D0%B0%D0%B9%D0%B2%D0%B8%D0%BD%D0%B3-%D1%88%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD-(Copy)?node-id=0%3A1&t=mbmsKHhjggdFmooC-1">
-                        <img src="figma.png">
-                        <h2>Макет веб-сайту</h2>
-                    </a>
-                    <a href="https://misterfrisk.github.io/Logikaschool/">
-                        <img src="andr.png">
-                        <h2>Сайт Гоменюк Андрій</h2>
-                    </a>
-                </article>
+               
                 <article>
                     <a href="https://www.figma.com/file/rVfcR0h5SCqYJsZBnVQD8H/Untitled?node-id=0%3A1&t=5PmX7QUg066jFj50-1">
                         <img src="figma.png">
@@ -156,7 +147,7 @@
             <p>Адреса: Київська 6А</p>
             </div>
             <div>
-            <p>Номер телефона Менеджера Людмили: +++++067 315 5855 </p>
+            <p>Номер телефона Менеджера Людмили: 067 315 5855 </p>
             <p>Номер телефона Вчителя Марія: 0980289826</p>
             </div>
 
